Closed Bug 1507209 Opened 6 years ago Closed 6 years ago

We fire NavigationDelegate.onLoadError() in cases where Firefox would not show an error page

Categories

(GeckoView :: General, defect, P1)

defect

Tracking

(geckoview64 wontfix, firefox63 wontfix, firefox64 wontfix, firefox65 fixed)

RESOLVED FIXED
mozilla65
Tracking Status
geckoview64 --- wontfix
firefox63 --- wontfix
firefox64 --- wontfix
firefox65 --- fixed

People

(Reporter: snorp, Assigned: snorp)

References

Details

Attachments

(1 file)

This results in some mochitest failures if we then load an error page in response to onLoadError. We should probably just not fire this if Firefox wouldn't show an error page.
Assignee: nobody → snorp
64=wontfix because we don't need to uplift this test fix to GV 64 Beta.
Priority: -- → P1
Pushed by jwillcox@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9fa6d8be9e01 Don't fire 'onLoadError' if Firefox wouldn't show an error page r=smaug
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 65
status-geckoview64=wontfix
Product: Firefox for Android → GeckoView
Target Milestone: Firefox 65 → mozilla65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: