Bug 1507209 - Don't fire 'onLoadError' if Firefox wouldn't show an error page r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D11911